--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         header {
-            background-image: url(https://prikachi.net/images/K04eM.png);
+            background-image: url(https://bit.ly/2Gl8VuZ);
             background-position: center center;
             min-height: 399px;
             display: flex;
