--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Левски това е България</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="icon" type="image/png" href="images/favicon.ico"/>
+    <link rel="icon" type="image/png" href="images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -34,14 +34,19 @@
         }
 
         header {
-            background-image: url(https://prikachi.net/images/2NKBE.png);
+            background-image: url(https://prikachi.net/images/K04eM.png);
             background-position: center center;
             min-height: 399px;
             display: flex;
+            flex-direction: column;
+            align-items: center;
             justify-content: center;
-            align-items: flex-end;
-            padding-top: 9rem;
+            padding-top: 2rem;
             text-align: center;
+        }
+
+        header img {
+            width: 100%;
         }
 
         header h1 {
@@ -175,6 +180,10 @@
 
 
     <header>
+        <div>
+            <img src="images/K0Kl.png">
+        </div>
+
         <h1>Левски - това е България</h1>
     </header>
 
